modules/gdscript/tests/scripts/analyzer/errors/local_constant_override_type.gd
func test():
	const Node = Custom
	var a: Node = Node2D.new()

class Custom extends RefCounted:
	pass
